--- a/app/views/clubrelays.html
+++ b/app/views/clubrelays.html
@@ -1,10 +1,7 @@
 <div class="clubrelays-page-container">
-  <div class="centered-content padded-content">
-    <div class="title-container">
-      <span class="page-title">Club Relays</span>
-    </div>
-
-    <div class="page-content extra-vertical-space">
+  <div class="container">
+    <div class="itc-h1">Club Relays</div>
+    <div class="page-content">
       <div class="info">
         <div class="info-header">Registration Info</div>
         <div>Please contact Sean Bruyere, meet coordinator, at <a class="link" href="mailto:sbruyer2@illinois.edu">sbruyer2@illinois.edu</a> or at <a class="link" href="illinoistfclub+meetcoord@gmail.com">illinoistfclub+meetcoord@gmail.com</a></div>
@@ -12,7 +9,7 @@
 
       <div class="info">
         <div class="info-header">Cost</div>
-        <div>$10 per individual event and $20 per relay team (team cap at $200)</div>
+        <div>$10 per individual event and $20 per relay team (team cap at $200).</div>
         <div>Payment is due the day of the meet. Please make checks payable to "Illinois Track and Field Club".</div>
       </div>
 
@@ -26,28 +23,42 @@
         <div>The women’s race of each event will precede the men’s race. The meet will be run on a rolling schedule. Both running and field events will begin at 10:00 AM.</div>
       </div>
       <div class="meet-schedule">
-        <div class="two-column-table">
-          <div class="left-column">
-            <div class="column-header">Running Events:</div>
-            <div class="row">60m Hurdles</div>
-            <div class="row">60m Dash</div>
-            <div class="row">4x800m Relay</div>
-            <div class="row">4x200m Relay</div>
-            <div class="row">3000m Run</div>
-            <div class="row">1600m Sprint Medley Relay</div>
-            <div class="row">1 Mile Run</div>
-            <div class="row">4x400m Relay</div>
+        <div class="table">
+          <div class="table-header" layout="row">
+            <div flex="40">Running Events</div>
+            <div flex="40">Field Events</div>
           </div>
-          <div class="right-column">
-            <div class="column-header">Field Events:</div>
-            <div class="row">High Jump</div>
-            <div class="row">Long Jump</div>
-            <div class="row">Triple Jump</div>
-            <div class="row">Shot Put</div>
-            <div class="row">&nbsp;</div>
-            <div class="row">&nbsp;</div>
-            <div class="row">&nbsp;</div>
-            <div class="row">&nbsp;</div>
+          <div class="table-row" layout="row">
+            <div flex="40">60m Hurdles</div>
+            <div flex="40">Long Jump</div>
+          </div>
+          <div class="table-row" layout="row">
+            <div flex="40">60m Dash</div>
+            <div flex="40">Triple Jump</div>
+          </div>
+          <div class="table-row" layout="row">
+            <div flex="40">4x800m Relay</div>
+            <div flex="40">High Jump</div>
+          </div>
+          <div class="table-row" layout="row">
+            <div flex="40">4x200m Relay</div>
+            <div flex="40">Shot Put</div>
+          </div>
+          <div class="table-row" layout="row">
+            <div flex="40">3000m Run</div>
+            <div flex="40"></div>
+          </div>
+          <div class="table-row" layout="row">
+            <div flex="40">1600m Sprint Medley Relay</div>
+            <div flex="40"></div>
+          </div>
+          <div class="table-row" layout="row">
+            <div flex="50">Mile Run</div>
+            <div flex="50"></div>
+          </div>
+          <div class="table-row" layout="row">
+            <div flex="50">4x400m Relay</div>
+            <div flex="50"></div>
           </div>
         </div>
       </div>
