--- a/app/views/results.html
+++ b/app/views/results.html
@@ -1,5 +1,5 @@
 <div class="results-page-container">
-  <div class="centered-content padded-content">
+  <div class="container">
     <md-tabs class="tabs" md-dynamic-height>
       <md-tab label="Records" analytics-on="click" analytics-event="Viewed club records">
         <div class="md-headline extra-vertical-space">Cross Country</div>
