--- a/app/views/home.html
+++ b/app/views/home.html
@@ -8,8 +8,8 @@
 		<a class="featured-icon social-bar youtube-bar" href="https://www.youtube.com/channel/UCcZRTX-FYPADoTpgc1jAcow"><i class="ion-social-youtube"></i></a>
 	</div>
 
-	<div class="centered-content container about-container">
-		<div class="itc-h1 about-title">About Us</div>
+	<div class="container about-container">
+		<div class="itc-h1">About Us</div>
 		<div>The University of Illinois Cross Country and Track Clubs are competitive coeducational collegiate running teams that compete at NCAA and NIRCA (National Intercollegiate Running Club Association) competitions during both cross country (fall) and track (spring) seasons. Our members are graduate and undergraduate students at the University of Illinois and include everyone from beginning runners to All-State and All-American athletes.</div>
 		<div>We are one of the foremost clubs in NIRCA, and travel all over the Midwest to compete at NCAA and NIRCA meets for both track and cross country.</div>
 		<div>If you are interested or if you have any questions please do not hesitate to contact us or visit our prospective members page. Thank you and we hope to see you out competing with us soon! We generally meet daily at 4:15 at the west entrance of the Armory at 4th and Gregory during the school year.</div>
