--- a/app/views/clubrelays.html
+++ b/app/views/clubrelays.html
@@ -3,23 +3,23 @@
     <div class="itc-h1">Club Relays</div>
     <div class="page-content">
       <div class="info">
-        <div class="info-header">Registration Info</div>
+        <div class="itc-h5">Registration Info</div>
         <div>Please contact Sean Bruyere, meet coordinator, at <a class="link" href="mailto:sbruyer2@illinois.edu">sbruyer2@illinois.edu</a> or at <a class="link" href="illinoistfclub+meetcoord@gmail.com">illinoistfclub+meetcoord@gmail.com</a></div>
       </div>
 
       <div class="info">
-        <div class="info-header">Cost</div>
+        <div class="itc-h5">Cost</div>
         <div>$10 per individual event and $20 per relay team (team cap at $200).</div>
         <div>Payment is due the day of the meet. Please make checks payable to "Illinois Track and Field Club".</div>
       </div>
 
       <div class="info">
-        <div class="info-header">Facility</div>
+        <div class="itc-h5">Facility</div>
         <div>The meet will be held at the University of Illinois Armory, a 200 meter indoor track. Spikes are permitted. Batons and starting blocks will be provided. Parking will be available at Huff Hall (directly south of the Armory).</div>
       </div>
 
       <div class="info">
-        <div class="info-header">Schedule of Events</div>
+        <div class="itc-h5">Schedule of Events</div>
         <div>The women’s race of each event will precede the men’s race. The meet will be run on a rolling schedule. Both running and field events will begin at 10:00 AM.</div>
       </div>
       <div class="meet-schedule">
@@ -63,7 +63,7 @@
         </div>
       </div>
       <div class="info">
-        <div class="info-header">Scoring</div>
+        <div class="itc-h5">Scoring</div>
         <div>Relay events are scored 10-8-6-5-4-3-2-1, with only one relay team per school per event scoring. You may enter as many relay teams as you like. Individual events are scored as two person relays, with the top two marks from each team added together to determine the team score (except for mile, in which case the top four marks are added together). You do not have to declare your scorers in advance. Relay teams must be single-sex.</div>
       </div>
 
