--- a/app/styles/utilities/_typography.scss
+++ b/app/styles/utilities/_typography.scss
@@ -72,6 +72,18 @@
   }
 }
 
+a, a:visited, a:hover {
+  cursor: pointer;
+  color: inherit;
+  text-decoration: none;
+}
+
+.link, .link:visited, .link:hover {
+  color: $link;
+  cursor: pointer;
+  text-decoration: none;
+}
+
 .featured-icon {
   font-size: 50px;
 
