Updated club relays page for Sean

--- a/app/views/clubrelays.html
+++ b/app/views/clubrelays.html
@@ -3,6 +3,11 @@
     <div class="itc-h1">Club Relays</div>
     <div class="page-content">
       <div class="info">
+        <div class="itc-h5"></div>
+        <div><em>A special thanks to the 26 teams and over 570 athletes who made the 2016 Illinois Club Relays yet again the biggest meet ever! Each year this meet gets bigger and more competitive, as proven by the 8 new meet records broken this year. We look forward to seeing all the teams compete this year on <strong>February 25th</strong> at the 2017 Illinois Club Relays! <a class="link" target="_blank" href="https://drive.google.com/open?id=0B9IJ7PBOO1nSRi1Kc3dDSlQyUmM">2016 Club Relays Results</a></em></div>
+      </div>
+
+      <div class="info">
         <div class="itc-h5">Registration Info</div>
         <div>Please contact Sean Bruyere, meet coordinator, at <a class="link" href="mailto:sbruyer2@illinois.edu">sbruyer2@illinois.edu</a> or at <a class="link" href="illinoistfclub+meetcoord@gmail.com">illinoistfclub+meetcoord@gmail.com</a></div>
       </div>
@@ -15,7 +20,7 @@
 
       <div class="info">
         <div class="itc-h5">Facility</div>
-        <div>The meet will be held at the University of Illinois Armory, a 200 meter indoor track. Spikes are permitted. Batons and starting blocks will be provided. Parking will be available at Huff Hall (directly south of the Armory).</div>
+        <div>The meet will be held at the University of Illinois Armory (505 East Armory Avenue, Champaign, IL 61820), a 200 meter indoor track. Spikes are permitted. Batons and starting blocks will be provided. Parking will be available at Huff Hall (directly south of the Armory).</div>
       </div>
 
       <div class="info">
