--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,5 +1,5 @@
 <div class="home-page-container">
-	<img class="home-image" src="images/itc_front_banner.png" />
+	<div class="home-image-container"><img class="home-image" src="images/itc_front_banner.png" /></div>
 
 	<div class="social-bar-container" layout="row" layout-align="center center">
 		<a class="featured-icon social-bar facebook-bar" href="https://www.facebook.com/illinoisxctrackclub/"><i class="ion-social-facebook"></i></a>
