--- a/app/styles/contact.scss
+++ b/app/styles/contact.scss
@@ -18,6 +18,11 @@
           color: lighten($black, 40%);
         }
       }
+
+      .card-actions {
+        margin-left: 16px;
+        margin-right: 16px;
+      }
     }
   }
 
