--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -74,112 +74,11 @@ md-menu-content {
 	.menu-item {
 		padding: 0 10px;
     font-size: 16px;
+
+    @media (max-width: $break-sm) {
+    	font-size: 10px;
+    }
 	}
 }
 
-.top-performance-table {
-	padding-top: 20px;
-	clear: both;
-	height: 100%;
-	width: 100%;
 
-	.left-table {
-		float: left;
-	}
-
-	.event-title {
-		font-size: 20px;
-	}
-
-	.left-table, .right-table {
-		width: 49%;
-
-		.row {
-			padding: 3px 0;
-			width: 100%;
-
-			.athlete-names {
-				display: inline-block;
-				float: left;
-				width: 80%;
-
-				.name {
-					margin-right: 5px;
-				}
-			}
-
-			.record {
-				display: inline-block;
-				text-align: right;
-				width: 20%;
-				font-weight: 700;
-			}
-		}
-	}
-
-	.right-table {
-		float: right;
-	}
-}
-
-.athlete-result-table {
-	padding-top: 20px;
-	clear: both;
-	height: 100%;
-	width: 100%;
-
-	.left-table {
-		float: left;
-	}
-
-	.left-table, .right-table {
-		width: 49%;
-
-		.season {
-			margin-bottom: 10px;
-			text-align: center;
-
-			.season-name {
-				font-weight: 700;
-				font-size: 24px;
-				color: $orange;
-				text-decoration: underline;
-			}
-		}
-
-		.event {
-			margin-top: 8px;
-			margin-bottom: 20px;
-
-			.event-name {
-				font-weight: 500;
-			}
-
-			.row {
-				padding: 3px 0;
-				width: 100%;
-
-				.meet {
-					display: inline-block;
-					float: left;
-					width: 80%;
-
-					.meet-span {
-						margin-right: 5px;
-					}
-				}
-
-				.record {
-					display: inline-block;
-					text-align: right;
-					width: 20%;
-					font-weight: 700;
-				}
-			}
-		}
-	}
-
-	.right-table {
-		float: right;
-	}
-}
