--- a/app/styles/results.scss
+++ b/app/styles/results.scss
@@ -8,31 +8,28 @@
       margin-top: 20px;
     }
 
+    .spinner {
+      margin-top: 25px;
+    }
+
     .table {
       padding: 10px 0;
 
-      .spinner {
-        margin-top: 25px;
+      .table-row div {
+        padding-right: 0;
       }
 
       .left {
         text-align: left;
-
-        .name {
-          padding-left: 8px;
-        }
       }
 
       .center {
         text-align: center;
+        padding-right: 0;
       }
 
       .right {
         text-align: right;
-
-        .name {
-          padding-right: 8px;
-        }
       }
 
       .record-time {
@@ -41,6 +38,31 @@
 
       .splits {
         padding-left: 10px;
+      }
+    }
+
+    .results-table {
+      .table-header div, .table-row div {
+        font-size: 8px;
+      }
+    }
+
+    .top-performance-table {
+      padding-top: 20px;
+      clear: both;
+      height: 100%;
+      width: 100%;
+
+      .left-table {
+        float: left;
+      }
+
+      .left-table, .right-table {
+        width: 49%;
+      }
+
+      .right-table {
+        float: right;
       }
     }
   }
